--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en" translate="no">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Ben Xia's personal website :)"
     />
+    <link rel="apple-touch-icon" href="/stickfigure-192.jpg" />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,6 +26,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>benjxia</title>
+    <script type="module" src="/src/index.jsx"></script>
     <!-- Fontawesome used for linkedin/github/ig icons -->
     <script src="https://kit.fontawesome.com/b22a76f1d7.js" crossorigin="anonymous"></script>
   </head>
@@ -40,6 +42,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     <div id="root"></div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
