--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
       content="Ben Xia's personal website :)"
     />
     <link rel="apple-touch-icon" href="/stickfigure-192.jpg" />
-    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+
+    <!-- Open Graph tags -->
+    <meta content="benjxia.dev" property="og:title">
+    <meta content="Ben Xia's personal website :)" property="og:description">
+    <!-- <meta content="https://benjxia.dev/stickfigure-192.jpg" property="og:image"/> -->
+    <meta content="https://benjxia.dev" property="og:url">
+    <meta content="website" property="og:type">
+    <meta content="benjxia.dev" property="og:site_name" >
+    <meta content="en_US" property="og:locale">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <title>benjxia</title>
     <script type="module" src="/src/index.jsx"></script>
     <!-- Fontawesome used for linkedin/github/ig icons -->
