--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Ben Xia's personal website :)"
-    />
+    <meta name="description" content="Ben Xia's personal website :)"/>
     <link rel="apple-touch-icon" href="/stickfigure-192.jpg" />
 
     <!-- Open Graph tags -->
@@ -19,10 +16,6 @@
     <meta content="website" property="og:type">
     <meta content="benjxia.dev" property="og:site_name" >
     <meta content="en_US" property="og:locale">
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="/manifest.json" />
 
     <title>benjxia</title>
@@ -31,16 +24,6 @@
     <script src="https://kit.fontawesome.com/b22a76f1d7.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
     <div id="root"></div>
   </body>
 </html>
