--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
     <!-- Fontawesome used for linkedin/github/ig icons -->
     <script src="https://kit.fontawesome.com/b22a76f1d7.js" crossorigin="anonymous"></script>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GF7LRZQTRT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-GF7LRZQTRT');
+  </script>
   <body>
     <div id="root"></div>
   </body>
