--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-GF7LRZQTRT"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-GF7LRZQTRT');
+    const host = window.location.hostname;
+    if (host !== 'localhost') {
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-GF7LRZQTRT');
+    }
   </script>
   <body>
     <div id="root"></div>
